--- a/about.html
+++ b/about.html
@@ -43,8 +43,8 @@
 		<div class="preloaders">
 			<span class="loader"></span>
 		</div>
-		<!-- END PRELOADER -->		
-
+		<!-- END PRELOADER -->	
+		
 		<!-- START NAVBAR -->  
 		<div id="navigation" class="navbar-light bg-faded site-navigation">
 			<div class="container-fluid">
@@ -123,163 +123,73 @@
 		</div> 	  
 		<!-- END NAVBAR -->		
 
-		<!-- START HOME -->
-		<section class="home_bg hb_height" style="background-image: url(assets/img/bg/home-bg.jpg);  background-size:cover; background-position: center center;">
+		<!-- START SECTION TOP -->
+		<section class="section-top">
 			<div class="container">
-				<div class="row">
-				  <div class="col-lg-7 col-sm-12 col-xs-12">
-					<div class="hero-text ht_top">
-						<h1>We're a best cyber security problem solution team</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, consectetur adipiscing elit tempor ut labore</p>
-					</div>
-					<div class="home_btns">
-						<a href="about.html" class="btn_one">Discover More</a>		
-						<a class="video-play" href="https://www.youtube.com/watch?v=RXv_uIN6e-Y"><i class="ti-image"></i> <span class="video-title">Video Tour</span></a>
-					</div>						
-				  </div><!--- END COL -->						  
-				</div><!--- END ROW -->
+				<div class="col-lg-10 offset-lg-1 text-center">
+					<div class="section-top-title wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.3s" data-wow-offset="0">
+						<h1>About</h1>
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li> / About</li>
+						</ul>
+					</div><!-- //.HERO-TEXT -->
+				</div><!--- END COL -->
 			</div><!--- END CONTAINER -->
-		</section>
-		<!-- END  HOME -->			
-
-		<!-- START COUNTER -->
-		<section class="count_area counter_feature">
-			<div class="container">
-				<div class="row text-center">
-					<div class="col-lg-3 col-sm-6 col-xs-12 no-padding">
-						<div class="single-project">
-							<h2 class="counter-num">34</h2>
-							<h4>Our Experience</h4>
-						</div>							
-					</div>
-					<div class="col-lg-3 col-sm-6 col-xs-12 no-padding">
-						<div class="single-project">
-							<h2 class="counter-num">99</h2>
-							<h4>Customer Satisfaction</h4>
-						</div>
-					</div><!-- END COL -->
-					<div class="col-lg-3 col-sm-6 col-xs-12 no-padding">
-						<div class="single-project">
-							<h2 class="counter-num">184</h2>
-							<h4>Our team member</h4>
-						</div>
-					</div><!-- END COL -->
-					<div class="col-lg-3 col-sm-6 col-xs-12 no-padding">
-						<div class="single-project">
-							<h2 class="counter-num">541</h2>
-							<h4>Porject Complete</h4>
-						</div>
-					</div><!-- END COL -->						
-				</div><!--- END ROW -->
-			</div><!--- END CONTAINER -->		
-		</section>
-		<!-- END  HOME COUNTER -->			
+		</section>	
+		<!-- END SECTION TOP -->
 
 		<!-- START ABOUT US -->
 		<section class="ab_one section-padding">
 			<div class="container">									
-				<div class="row">								
-					<div class="col-lg-6 col-sm-12 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s" data-wow-offset="0">
-						<div class="ab_img">
-							<img src="assets/img/about1.png" class="img-fluid" alt="image">
-						</div>
-					</div><!--- END COL -->					
+				<div class="row">												
 					<div class="col-lg-6 col-sm-12 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0">
 						<div class="ab_content">
 							<span>About our company</span>
-							<h2>This is 24/7 Cyber security operation center for your problem solution.</h2>		
+							<h2>Our experts team are providing a 24/7 technical support and services.</h2>		
 						</div>
-						<div class="abmv">
-							<h4><img src="assets/img/check.png" alt="" /> Identifiying threats</h4>
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor ut labore.</p>
-						</div>
-						<div class="abmv">
-							<h4><img src="assets/img/check.png" alt="" /> Security management</h4>
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor ut labore.</p>
+						<div class="abmv_list">
+							<ul>
+								<li><img src="assets/img/check.png" alt="" /> Secure user access to data and applications system.</li>
+								<li><img src="assets/img/check.png" alt="" /> A security-first approach to protect customer workloads.</li>
+								<li><img src="assets/img/check.png" alt="" /> Extend security and risk mitigation capabilities now.</li>
+								<li><img src="assets/img/check.png" alt="" /> Safeguard your most valuable asset—data.</li>
+							</ul>
 						</div>	
-					</div><!--- END COL -->								  
+						<div class="skill_btn">
+							<a href="service.html" class="btn_one">Get your services <i class="ti-arrow-top-right"></i></a>			
+							<a href="#" class="btn_two">Contact with us <i class="ti-arrow-top-right"></i></a>
+						</div>						
+					</div><!--- END COL -->	
+					<div class="col-lg-6 col-sm-12 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s" data-wow-offset="0">
+						<div class="ab_img ai_top">
+							<p>Maximize value with our on-demand, outcome-based, transparent vulnerability assessment, automated remediation.</p>
+							<img src="assets/img/about3.png" class="img-fluid" alt="image">
+						</div>
+					</div><!--- END COL -->						
 				</div><!--- END ROW -->
 			</div><!--- END CONTAINER -->
 		</section>
 		<!-- END ABOUT US  -->	
 
-		<!-- START SERVICE -->
-		<section class="service_area section-padding">
-			<div class="container">	
+		<!-- START COMPANY PARTNER LOGO  -->
+		<div class="partner-logo">
+			<div class="container">
 				<div class="row">
-					<div class="col-lg-6 col-sm-6 col-xs-12">
-						<div class="section-title">
-							<span>Our services</span>
-							<h2>What we do for your  <br />Cyber security solutions</h2>
-						</div>					
-					</div>
-					<div class="col-lg-6 col-sm-6 col-xs-12">
-						<div class="ser_btn">
-							<a href="service.html" class="btn_two">View all services <i class="ti-arrow-top-right"></i></a>
+					<div class="col-lg-12 text-center">
+						<div class="partner">
+							<a href="#"><img src="assets/img/partner/1.png" alt="image"></a>
+							<a href="#"><img src="assets/img/partner/2.png" alt="image"></a>
+							<a href="#"><img src="assets/img/partner/3.png" alt="image"></a>
+							<a href="#"><img src="assets/img/partner/4.png" alt="image"></a>
+							<a href="#"><img src="assets/img/partner/5.png" alt="image"></a>
+							<a href="#"><img src="assets/img/partner/1.png" alt="image"></a>
 						</div>
-					</div>
-				</div>
-				<div class="row">								
-					<div class="col-lg-4 col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s" data-wow-offset="0">
-						<div class="single_service">
-							<img src="assets/img/service1.png" class="img-fluid" alt="image">
-							<h2>Malware Protection</h2>
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor.</p>
-							<a href="service.html">Read More <i class="ti-arrow-top-right"></i></a>
-						</div>
-					</div><!--- END COL -->						
-					<div class="col-lg-4 col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s" data-wow-offset="0">
-						<div class="single_service">
-							<img src="assets/img/service2.png" class="img-fluid" alt="image">
-							<h2>Server Protection</h2>
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor.</p>
-							<a href="service.html">Read More <i class="ti-arrow-top-right"></i></a>
-						</div>
-					</div><!--- END COL -->						
-					<div class="col-lg-4 col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s" data-wow-offset="0">
-						<div class="single_service">
-							<img src="assets/img/service3.png" class="img-fluid" alt="image">
-							<h2>Computer Security</h2>
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor.</p>
-							<a href="service.html">Read More <i class="ti-arrow-top-right"></i></a>
-						</div>
-					</div><!--- END COL -->												  
-				</div><!--- END ROW -->
-			</div><!--- END CONTAINER -->
-		</section>
-		<!-- END SERVICE -->
-
-		  <div class="marq_text">
-			<div id="supermarquee1"></div>
-		  </div>
-		  
-		<!-- START ABOUT US -->
-		<section class="ab_one section-padding">
-			<div class="container">									
-				<div class="row">											
-					<div class="col-lg-6 col-sm-12 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s" data-wow-offset="0">
-						<div class="ab_img">
-							<img src="assets/img/about2.png" class="img-fluid" alt="image">
-						</div>
-					</div><!--- END COL -->						
-					<div class="col-lg-6 col-sm-12 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0">
-						<div class="ab_content">
-							<span>Trust your cyber company</span>
-							<h2>This is 24/7 Cyber security operation center for your problem solution..</h2>		
-						</div>
-						<div class="abmv">
-							<h4><img src="assets/img/check.png" alt="" /> Security Services</h4>
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor ut labore.</p>
-						</div>
-						<div class="abmv">
-							<h4><img src="assets/img/check.png" alt="" /> Industry Certified</h4>
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor ut labore.</p>
-						</div>	
-					</div><!--- END COL -->						
-				</div><!--- END ROW -->
-			</div><!--- END CONTAINER -->
-		</section>
-		<!-- END ABOUT US  -->			  
+					</div><!-- END COL  -->
+				</div><!--END  ROW  -->
+			</div><!-- END CONTAINER  -->
+		</div>
+		<!-- END COMPANY PARTNER LOGO -->		
 		
 		<!-- START PORTFOLIO -->
 		<section class="port_area section-padding">
@@ -386,91 +296,6 @@
 			</div><!--- END CONTAINER -->
 		</section>
 		<!-- END CHOOSE -->	
-		
-		<!-- START PRICING-->
-		<section class="plan_home_area section-padding">
-		   <div class="container">	
-				<div class="section-title text-center">
-					<span>Pricing Plan</span>
-					<h2>Our best pricing plan for <br />your solution</h2>
-				</div>			
-				<div class="row">								
-					<div class="col-lg-4 col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0">
-						<div class="pricingTable">
-							<div class="pricingTable-header">
-								<h3 class="title">Personal</h3>
-							</div>
-							<div class="pricing-icon">
-								<i class="ti-medall"></i>
-							</div>
-							<ul class="pricing-content">
-								<li>5 website</li>
-								<li>50GB Disk Space</li>
-								<li>50 Email Accounts</li>
-								<li>50GB Monthly Bandwidth</li>
-								<li>10 Subdomains</li>
-							</ul>
-							<div class="price-value">
-								<span class="amount">$99</span>
-								<span class="duration">/mo</span>
-							</div>
-							<div>
-								<a href="#" class="btn_one">Purchase Now</a>
-							</div>
-						</div>
-					</div><!-- END COL-->							
-					<div class="col-lg-4 col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0">
-						<div class="pricingTable">
-							<div class="pricingTable-header">
-								<h3 class="title">Business</h3>
-							</div>
-							<div class="pricing-icon">
-								<i class="ti-server"></i>
-							</div>
-							<ul class="pricing-content">
-								<li>5 website</li>
-								<li>50GB Disk Space</li>
-								<li>50 Email Accounts</li>
-								<li>50GB Monthly Bandwidth</li>
-								<li>10 Subdomains</li>
-							</ul>
-							<div class="price-value">
-								<span class="amount">$199</span>
-								<span class="duration">/mo</span>
-							</div>
-							<div>
-								<a href="#" class="btn_one">Purchase Now</a>
-							</div>
-						</div>
-					</div><!-- END COL-->							
-					<div class="col-lg-4 col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0">
-						<div class="pricingTable">
-							<div class="pricingTable-header">
-								<h3 class="title">Premium</h3>
-							</div>
-							<div class="pricing-icon">
-								<i class="ti-cup"></i>
-							</div>
-							<ul class="pricing-content">
-								<li>5 website</li>
-								<li>50GB Disk Space</li>
-								<li>50 Email Accounts</li>
-								<li>50GB Monthly Bandwidth</li>
-								<li>10 Subdomains</li>
-							</ul>
-							<div class="price-value">
-								<span class="amount">$299</span>
-								<span class="duration">/mo</span>
-							</div>
-							<div>
-								<a href="#" class="btn_one">Purchase Now</a>
-							</div>
-						</div>
-					</div><!-- END COL-->																				
-				</div><!-- END ROW -->
-			</div><!-- END CONTAINER -->
-		</section>
-		<!-- END PRICING -->		
 		
 		<!-- START TESTIMONIALS-->
 		<section class="testi_home_area section-padding">
