--- a/contact.html
+++ b/contact.html
@@ -147,23 +147,22 @@
 						<div class="single_address">
 							<i class="ti-map"></i>
 							<h4>Our Location</h4>
-							<p>3481 Melrose Place, Beverly Hills <br /> CA 90210</p>
+							<p>Bhopal, Madhya Pradesh <br /> IN 462023</p>
 						</div>
 					</div><!-- END COL -->
 					<div class="col-lg-4 col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s" data-wow-offset="0">
 						<div class="single_address sabr">
 							<i class="ti-mobile"></i>
 							<h4>Telephone</h4>
-							<p>(+1) 517 397 7100</p>
-							<p>(+1) 411 315 8138</p>
+							<p>(+91) 8236 89 2899</p>
 						</div>
 					</div><!-- END COL -->
 					<div class="col-lg-4 col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s" data-wow-offset="0">
 						<div class="single_address">
 							<i class="ti-email"></i>
 							<h4>Send email</h4>
-							<p>Info@example.com</p>
-							<p>admin@example.com</p>
+							<p>info@tabnet.io</p>
+							<p>recruitment@tabnet.io</p>
 						</div>
 					</div><!-- END COL -->			  
 				</div><!--- END ROW -->
