--- a/pricing.html
+++ b/pricing.html
@@ -144,7 +144,7 @@
 		   <div class="container">	
 				<div class="section-title text-center">
 					<span>Pricing Plan</span>
-					<h2>Our best pricing plan for <br />your solution</h2>
+					<h2>Our best pricing plan to enhance <br />Security</h2>
 				</div>			
 				<div class="row">								
 					<div class="col-lg-4 col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0">
@@ -157,17 +157,16 @@
 							</div>
 							<ul class="pricing-content">
 								<li>5 website</li>
-								<li>50GB Disk Space</li>
-								<li>50 Email Accounts</li>
-								<li>50GB Monthly Bandwidth</li>
-								<li>10 Subdomains</li>
+								<li>10 Network Devices</li>
+								<li>50 Desktop / Laptops</li>
+								<li>10 Servers</li>
 							</ul>
 							<div class="price-value">
-								<span class="amount">$99</span>
-								<span class="duration">/mo</span>
+								<span class="amount">INR XXXX</span>
+								<span class="duration"></span>
 							</div>
 							<div>
-								<a href="#" class="btn_one">Purchase Now</a>
+								<a href="#" class="btn_one">Contact Us</a>
 							</div>
 						</div>
 					</div><!-- END COL-->							
@@ -181,17 +180,16 @@
 							</div>
 							<ul class="pricing-content">
 								<li>5 website</li>
-								<li>50GB Disk Space</li>
-								<li>50 Email Accounts</li>
-								<li>50GB Monthly Bandwidth</li>
-								<li>10 Subdomains</li>
+								<li>10 Network Devices</li>
+								<li>50 Desktop / Laptops</li>
+								<li>10 Servers</li>
 							</ul>
 							<div class="price-value">
-								<span class="amount">$199</span>
-								<span class="duration">/mo</span>
+								<span class="amount">INR XXXX</span>
+								<span class="duration"></span>
 							</div>
 							<div>
-								<a href="#" class="btn_one">Purchase Now</a>
+								<a href="#" class="btn_one">Contact Us</a>
 							</div>
 						</div>
 					</div><!-- END COL-->							
@@ -205,17 +203,16 @@
 							</div>
 							<ul class="pricing-content">
 								<li>5 website</li>
-								<li>50GB Disk Space</li>
-								<li>50 Email Accounts</li>
-								<li>50GB Monthly Bandwidth</li>
-								<li>10 Subdomains</li>
+								<li>10 Network Devices</li>
+								<li>50 Desktop / Laptops</li>
+								<li>10 Servers</li>
 							</ul>
 							<div class="price-value">
-								<span class="amount">$299</span>
-								<span class="duration">/mo</span>
+								<span class="amount">INR XXXX</span>
+								<span class="duration"></span>
 							</div>
 							<div>
-								<a href="#" class="btn_one">Purchase Now</a>
+								<a href="#" class="btn_one">Contact Us</a>
 							</div>
 						</div>
 					</div><!-- END COL-->																				
