--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					</div>
 					<div class="home_btns">
 						<a href="about.html" class="btn_one">Discover More</a>		
-						<a class="video-play" href="https://www.youtube.com/watch?v=RXv_uIN6e-Y"><i class="ti-image"></i> <span class="video-title">Video Tour</span></a>
+						<a class="video-play" href="#"><i class="ti-image"></i> <span class="video-title">Video Tour</span></a>
 					</div>						
 				  </div><!--- END COL -->						  
 				</div><!--- END ROW -->
