--- a/project.html
+++ b/project.html
@@ -231,13 +231,13 @@
 					<div class="col-lg-3 col-sm-6 col-xs-12">
 						<div class="single_footer">
 							<a href="index.html"><img src="assets/img/logo.png" alt=""></a>         
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae risus nec dui venenatis dignissim.</p>
+							<p>At Tabnet, our mission is to provide cutting-edge security solutions that empower organizations to protect their data, maintain compliance, and confidently navigate the digital landscape. Join us in building a secure future for your business.							</p>
 							<div class="social_profile">
 								<ul>
 									<li><a href="#" class="f_facebook"><i class="ti-facebook" title="Facebook"></i></a></li>
 									<li><a href="#" class="f_twitter"><i class="ti-twitter" title="Twitter"></i></a></li>
 									<li><a href="#" class="f_instagram"><i class="ti-instagram" title="Instagram"></i></a></li>
-									<li><a href="#" class="f_linkedin"><i class="ti-linkedin" title="LinkedIn"></i></a></li>
+									<li><a href="https://www.linkedin.com/company/tabnet" class="f_linkedin"><i class="ti-linkedin" title="LinkedIn"></i></a></li>
 								</ul>
 							</div>
 						</div>			
@@ -271,7 +271,7 @@
 					<div class="col-lg-3 col-sm-6 col-xs-12">
 						<div class="single_footer">
 							<h4>Download App</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae risus nec dui venenatis.</p>
+							<p>We're working on creating the best of the best application for our customer to review organization's Risk Summary							</p>
 							<a href="index.html"><img src="assets/img/play.png" class="foot_img" alt=""></a>  
 							<a href="index.html"><img src="assets/img/app.png" class="foot_img" alt=""></a>  
 						</div>
