--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
 				  <div class="col-lg-7 col-sm-12 col-xs-12">
 					<div class="hero-text ht_top">
 						<h1>We're a best cyber security problem solution team</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, consectetur adipiscing elit tempor ut labore</p>
+						<p>At Tabnet, our mission is to provide cutting-edge security solutions that empower organizations to protect their data, maintain compliance, and confidently navigate the digital landscape. Join us in building a secure future for your business.</p>
 					</div>
 					<div class="home_btns">
 						<a href="about.html" class="btn_one">Discover More</a>		
-						<a class="video-play" href="#"><i class="ti-image"></i> <span class="video-title">Video Tour</span></a>
+						<a class="video-play" href="https://www.youtube.com/watch?v=RXv_uIN6e-Y"><i class="ti-image"></i> <span class="video-title">Video Tour</span></a>
 					</div>						
 				  </div><!--- END COL -->						  
 				</div><!--- END ROW -->
@@ -674,13 +674,13 @@
 				<div class="col-lg-3 col-sm-6 col-xs-12">
 					<div class="single_footer">
 						<a href="index.html"><img src="assets/img/logo.png" alt=""></a>         
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae risus nec dui venenatis dignissim.</p>
+						<p>At Tabnet, our mission is to provide cutting-edge security solutions that empower organizations to protect their data, maintain compliance, and confidently navigate the digital landscape. Join us in building a secure future for your business.</p>
 						<div class="social_profile">
 							<ul>
 								<li><a href="#" class="f_facebook"><i class="ti-facebook" title="Facebook"></i></a></li>
 								<li><a href="#" class="f_twitter"><i class="ti-twitter" title="Twitter"></i></a></li>
 								<li><a href="#" class="f_instagram"><i class="ti-instagram" title="Instagram"></i></a></li>
-								<li><a href="#" class="f_linkedin"><i class="ti-linkedin" title="LinkedIn"></i></a></li>
+								<li><a href="https://www.linkedin.com/company/tabnet" class="f_linkedin"><i class="ti-linkedin" title="LinkedIn"></i></a></li>
 							</ul>
 						</div>
 					</div>			
@@ -714,7 +714,7 @@
 				<div class="col-lg-3 col-sm-6 col-xs-12">
 					<div class="single_footer">
 						<h4>Download App</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae risus nec dui venenatis.</p>
+						<p>We're working on creating the best of the best application for our customer to review organization's Risk Summary</p>
 						<a href="index.html"><img src="assets/img/play.png" class="foot_img" alt=""></a>  
 						<a href="index.html"><img src="assets/img/app.png" class="foot_img" alt=""></a>  
 					</div>
