--- a/404.html
+++ b/404.html
@@ -171,7 +171,7 @@
 									<li><a href="#" class="f_facebook"><i class="ti-facebook" title="Facebook"></i></a></li>
 									<li><a href="#" class="f_twitter"><i class="ti-twitter" title="Twitter"></i></a></li>
 									<li><a href="#" class="f_instagram"><i class="ti-instagram" title="Instagram"></i></a></li>
-									<li><a href="#" class="f_linkedin"><i class="ti-linkedin" title="LinkedIn"></i></a></li>
+									<li><a href="https://www.linkedin.com/company/tabnet" class="f_linkedin"><i class="ti-linkedin" title="LinkedIn"></i></a></li>
 								</ul>
 							</div>
 						</div>			
