--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<meta name="description" content="Pathaan - One Page Parallax Template">
-		<meta name="keywords" content="agency, business, corporate, creative, html5, modern, multipurpose, One Page, parallax, startup">		
+		<meta name="description" content="">
+		<meta name="keywords" content="agency, business, corporate, creative, html5, modern, multipurpose">		
 		<!-- SITE TITLE -->
 		<title>Tabnet Inc - Best Place to Secure your infrastructure</title>			
 		<!-- Latest Bootstrap min CSS -->
