--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<meta name="description" content="Pathaan - One Page Parallax Template">
-		<meta name="keywords" content="agency, business, corporate, creative, html5, modern, multipurpose, One Page, parallax, startup">		
+		<meta name="description" content="">
+		<meta name="keywords" content="agency, business, corporate, creative, html5, modern, multipurpose">		
 		<!-- SITE TITLE -->
 		<title>Tabnet Inc - Best Place to Secure your infrastructure</title>			
 		<!-- Latest Bootstrap min CSS -->
@@ -258,7 +258,7 @@
 					<div class="col-lg-3 col-sm-6 col-xs-12">
 						<div class="single_footer">
 							<h4>Download App</h4>
-							<p>We're working on creating the best of the best application for our customer to review organization Risk Summary.							</p>
+							<p>We're working on creating the best of the best application for our customer to review organization Risk Summary							</p>
 							<a href="index.html"><img src="assets/img/play.png" class="foot_img" alt=""></a>  
 							<a href="index.html"><img src="assets/img/app.png" class="foot_img" alt=""></a>  
 						</div>
